# hacs-platinum-template

./: .pre-commit-config.yaml  CLAUDE.md  README.md  hacs.json  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt
.github/workflows/: ci.yml
custom_components/your_domain/: __init__.py  config_flow.py  const.py  diagnostics.py  manifest.json  quality_scale.yaml  strings.json
custom_components/your_domain/api/: __init__.py  client.py  exceptions.py
custom_components/your_domain/binary_sensor/: __init__.py
custom_components/your_domain/button/: __init__.py
custom_components/your_domain/coordinator/: __init__.py
custom_components/your_domain/entity/: __init__.py
custom_components/your_domain/sensor/: __init__.py
custom_components/your_domain/switch/: __init__.py
script/: check  lint  type-check
tests/: conftest.py  test_config_flow.py
